<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_bar"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/sort_the_list"
        android:icon="@drawable/ic_sort_img"
        android:iconTint="@color/colorPrimary"
        android:title="@string/sort"
        app:showAsAction="ifRoom">

        <menu>
            <item android:id="@+id/action_sort_by_name"
                android:title="@string/sort_by_name"/>

            <item
                android:id="@+id/action_sort_by_date"
                android:title="@string/sort_by_date" />

        </menu>

    </item>
</menu>