<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.trazeapp.view.customdialog.PermissionFragmentDialog"
    android:padding="20dp">


    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/traze_contact_tracing"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998" />

    <TextView
        android:id="@+id/first_label_description_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/label_access_descrption"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/_second_label_description_rules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24sp"
        android:text="@string/label_second_desciption_permission"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/first_label_description_permission"
        app:layout_constraintStart_toStartOf="@+id/first_label_description_permission"
        app:layout_constraintTop_toBottomOf="@+id/first_label_description_permission" />

    <TextView
        android:id="@+id/label_exit_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:text="@string/label_exit_app"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/label_proceed"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/_second_label_description_rules"
        app:layout_constraintTop_toBottomOf="@+id/_second_label_description_rules" />

    <TextView
        android:id="@+id/label_proceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/label_proceed"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/label_exit_app"
        app:layout_constraintEnd_toEndOf="@+id/_second_label_description_rules"
        app:layout_constraintStart_toEndOf="@+id/label_exit_app"
        app:layout_constraintTop_toTopOf="@+id/label_exit_app" />
</androidx.constraintlayout.widget.ConstraintLayout>