<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:weightSum="10"
    android:padding="15dp"
    tools:context="com.example.trazeapp.view.fragments.RegisterChoicesFragment">






    <TextView
        android:id="@+id/label_register_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="sans-serif-medium"
        android:text="@string/register_as"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/label_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/individual"
        android:textColor="@color/white"
         />

    <TextView
        android:id="@+id/second_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/transporatation"
        android:textColor="@color/white"
         />

    <TextView
        android:id="@+id/third_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/barangay"
        android:textColor="@color/white" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:textStyle="bold"
        android:text="Step 1 Select a type below "
        android:textColor="@color/white"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_header"
        android:layout_marginTop="2dp"

        android:textColor="@color/white"/>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"


        android:layout_weight="10"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:layout_marginTop="25dp"

        android:columnOrderPreserved="false"

        android:rowCount="3">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_rowWeight="1"

            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"

                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_barangay" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/label_barangay"
                    android:textColor="@color/color_accent"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_individual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_rowWeight="1"

            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"

                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/person_individual" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/individual_icon"
                    android:textColor="@color/color_accent"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_rowWeight="1"

            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"

                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_establsihment" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Establishment"
                    android:textColor="@color/color_accent"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_rowWeight="1"

            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"

                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_delivery_crews" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/delivery_crew"
                    android:textColor="@color/color_accent"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"

                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_transporation" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/transportation"
                    android:textColor="@color/color_accent"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </GridLayout>


</LinearLayout>