<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.trazeapp.view.fragments.MainScreenFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="0dp"
            android:layout_height="350dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/main_screen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.23000002" />

        <TextView
            android:id="@+id/label_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Welcome to VTracker"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/image_logo"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintStart_toStartOf="@+id/image_logo"
            app:layout_constraintTop_toBottomOf="@id/image_logo" />

        <TextView
            android:id="@+id/subHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/label_sub_header"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_header"
            app:layout_constraintVertical_bias="0.202" />

        <TextView
            android:id="@+id/label_dont_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/dont_have_account_yet"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/subHeader"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintStart_toStartOf="@+id/subHeader"
            app:layout_constraintTop_toBottomOf="@+id/subHeader" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerButton"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"

            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/color_accent"
            android:text="Register "
            app:cornerRadius="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/label_dont_have_account"
            app:layout_constraintStart_toStartOf="@+id/label_dont_have_account"
            app:layout_constraintTop_toTopOf="@+id/label_dont_have_account" />

        <TextView
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_login_main"
            android:textColor="@color/color_accent"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/registerButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/registerButton"
            app:layout_constraintTop_toTopOf="@+id/registerButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>